fixed syntax, adjusted font weight for ul li a

--- a/pages/project3/project3-the-casestudy.html
+++ b/pages/project3/project3-the-casestudy.html
@@ -437,7 +437,7 @@
       </div>
       <article class="resume-summary casestudy" id="section2">
         <h2>AI Content Creator & SEO Specialist Portfolio Project</h2>
-        <p><strong>Case Study:<a href="https://sports-tube-community.netlify.app/"></strong>  Sports Tube Community</a></p>
+        <p><strong>Case Study: <a href="https://sports-tube-community.netlify.app/">Sports Tube Community</a></strong></p>
         <p><strong>Role:</strong> Full-Stack Developer, AI Content Creator, SEO Content Specialist, AI-Powered Journalist</p>
         <p>
           <strong>GitHub Repository:</strong> 
