added aspect ratio to author-bio img

--- a/pages/project3/project3-the-casestudy.html
+++ b/pages/project3/project3-the-casestudy.html
@@ -610,7 +610,7 @@
             width="320" 
             height="117" 
             alt="Photo of Genny Allison, the web developer and AI content specialist"
-            style="object-fit: contain;"
+            style="object-fit: contain; aspect-ratio: 320 / 117;"
             loading="auto" 
             decoding="async" 
           />
