removed aspect ratio from author img, added min-height to main

--- a/pages/project2/project2-the-design.html
+++ b/pages/project2/project2-the-design.html
@@ -532,7 +532,7 @@
             </div>
             <div class="button-grid">
               <div class="click-me">
-                <a href="https://tech-trends-blog.netlify.app" target="_blank" rel="noopener noreferrer">the final look</a>
+                <a href="https://sports-tube.netlify.app/" target="_blank" rel="noopener noreferrer">the final look</a>
               </div>
               <div class="click-me">  
                 <a href="https://github.com/Allison2002/tech-trends.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
