--- a/pages/project2/project2-the-casestudy.html
+++ b/pages/project2/project2-the-casestudy.html
@@ -417,9 +417,9 @@
           <img
             src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_200/v1748537741/sports-tube-mobile_j2lush.avif"
             alt="Sports Tube project hero showcasing a fast-loading, responsive sports blog with AI-generated content"
-            width="164"
-            height="100"
-            style="object-fit: cover;"
+            width="1458"
+            height="948"
+            style="object-fit: cover; aspect-ratio: 1458 / 948; width: 100%; height: auto;"
             fetchpriority="high"
             loading="eager"
             decoding="async"
