updated hero img sizing and attributes

--- a/pages/project3/project3-the-casestudy.html
+++ b/pages/project3/project3-the-casestudy.html
@@ -380,11 +380,11 @@
           
           <!-- Fallback ≤480px -->
           <img
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_200/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,,w_1458,h_948/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif"
             alt="Hero image for the Sports Tube Community project—an AI content creation and SEO optimized Blog created by Genny Allison"
-            width="164"
-            height="100"
-            style="object-fit: cover;"
+            width="1458"
+            height="948"
+            style="object-fit: cover; aspect-ratio: 1458 / 948; width: 100%; height: auto;"
             fetchpriority="high"
             loading="eager"
             decoding="async"
