updated strong tags

--- a/pages/project2/project2-the-casestudy.html
+++ b/pages/project2/project2-the-casestudy.html
@@ -432,7 +432,7 @@
         </div>
       </div>
     </header>
-    <main class="about-me" id="projects">
+    <main class="about-me" id="casestudy">
       <div class="resume-date fancy-border project-title" id="description">
         <h2>project 2 | the casestudy</h2>
         <h2>Sports Tube</h2>
@@ -441,20 +441,20 @@
         <h2>
           AI Content Creator & SEO Specialist Portfolio Project
         </h2>
-        <p><strong class="padding">Case Study:</strong>Sports Tube</p>
-        <p><strong class="padding">Role:</strong>Front-End Developer, AI Content Creator, SEO & Accessibility Specialist
+        <p><strong>Case Study:</strong>Sports Tube</p>
+        <p><strong>Role:</strong>Front-End Developer, AI Content Creator, SEO & Accessibility Specialist
         </p>
         <p><strong >Website: </strong><a href="https://sports-tube.netlify.app/" target="_blank" rel="noopener noreferrer">Sports Tube</a></p>
         <p><strong>GitHub Repository: </strong><a href="https://github.com/Allison2002/my_tube.git" target="_blank" target="_blank" rel="noopener noreferrer">View the Code</a>
         </p>
         <hr class="casestudy-hr"/>
-        <h2>AI Content Creator & SEO Specialist Portfolio Project</h2>
+        <h3>AI Content Creator & SEO Specialist Portfolio Project</h3>
         <p>
-          <strong>Sports Tube Video Blog</strong> is a fully responsive, AI-enhanced platform designed for sports fans to stream highlights, documentaries, and live video content. This project demonstrates my core strengths as an <strong>AI Content Creator</strong>, <strong>SEO Specialist</strong>, and <strong>Accessibility Advocate</strong> by transforming a low-performing site into a fast, engaging, and discoverable user experience.
+          <a href="https://sports-tube.netlify.app/" target="_blank" rel="noopener noreferrer"><span style="color: cyan;">Sports Tube Video Blog</span></a> is a fully responsive, AI-enhanced platform designed for sports fans to stream highlights, documentaries, and live video content. This project demonstrates my core strengths as an <span style="color: cyan; font-weight: 500;">AI Content Creator</span>, <span style="color: cyan; font-weight: 500;">SEO Specialist</span>, and <span style="color: cyan; font-weight: 500;">Accessibility Advocate</span> by transforming a low-performing site into a fast, engaging, and discoverable user experience.
         </p>
 
         <p>
-          With a starting <strong>Google PageSpeed Insights score of just 35</strong> on desktop, I implemented a series of performance and SEO upgrades that elevated the site to a <strong>100/100 score on desktop</strong> and <strong>99/100 on mobile</strong>. Every element—from content clarity to load speed—was crafted with a focus on <strong>AI integration</strong>, <strong>search engine optimization</strong>, and <strong>universal usability</strong>.
+          With a starting <span>Google PageSpeed Insights score of just 35</span> on desktop, I implemented a series of performance and SEO upgrades that elevated the site to a <span >100/100 score on desktop</span> and <span>99/100 on mobile</span>. Every element—from content clarity to load speed—was crafted with a focus on <span>AI integration</span>, <span>search engine optimization</span>, and <span>universal usability</span>.
         </p>
 
         <hr class="casestudy-hr" />
@@ -462,9 +462,9 @@
           <h3>Objectives</h3>
           <ul>
             <li>Create a sleek, intuitive video platform centered on sports content.</li>
-            <li>Use <strong>AI tools</strong> to accelerate content creation and SEO workflows.</li>
-            <li>Improve performance from a <strong>35 desktop score</strong> to near-perfect metrics.</li>
-            <li>Ensure <strong>WCAG-aligned accessibility</strong> and inclusive design practices.</li>
+            <li>Use <span>AI tools</span> to accelerate content creation and SEO workflows.</li>
+            <li>Improve performance from a <span>35 desktop score</span> to near-perfect metrics.</li>
+            <li>Ensure <span>WCAG-aligned accessibility</span> and inclusive design practices.</li>
           </ul>
         </div>
 
@@ -473,10 +473,10 @@
           <h3>The Role of AI</h3>
           <p>AI technologies played a central role in content development, design, and optimization:</p>
           <ul>
-            <li><strong>ChatGPT:</strong> Generated SEO-optimized headlines, descriptions, and metadata to support organic visibility.</li>
-            <li><strong>MidJourney & DALL·E:</strong> Produced custom sports-inspired visuals for hero banners and branding elements.</li>
-            <li><strong>Canva:</strong> Used to refine and unify visual assets, including thumbnails and social sharing graphics.</li>
-            <li><strong>AI SEO Tools:</strong> Automated audits identified real-time opportunities for performance and accessibility improvements.</li>
+            <li><span>ChatGPT:</span> Generated SEO-optimized headlines, descriptions, and metadata to support organic visibility.</li>
+            <li><span>MidJourney & DALL·E:</span> Produced custom sports-inspired visuals for hero banners and branding elements.</li>
+            <li><span>Canva:</span> Used to refine and unify visual assets, including thumbnails and social sharing graphics.</li>
+            <li><span>AI SEO Tools:</span> Automated audits identified real-time opportunities for performance and accessibility improvements.</li>
           </ul>
         </div>
 
@@ -485,10 +485,10 @@
           <h3>SEO Optimization</h3>
           <p>To ensure discoverability and long-term ranking success, I implemented:</p>
           <ul>
-            <li><strong>Google PageSpeed Optimization:</strong> Focused on critical rendering paths, efficient caching, and <strong>next-gen image delivery</strong>.</li>
-            <li><strong>Keyword Strategy:</strong> Leveraged <em>SEMrush</em> and <em>Google Trends</em> to identify niche phrases and align metadata, headers, and content structure.</li>
-            <li><strong>Schema Markup:</strong> Added structured data for video content to enhance visibility in SERPs and rich results.</li>
-            <li><strong>On-Page SEO:</strong> Created AI-crafted articles and linked category pages to build internal authority and boost engagement.</li>
+            <li><span>Google PageSpeed Optimization:</span> Focused on critical rendering paths, efficient caching, and <span>next-gen image delivery</span>.</li>
+            <li><span>Keyword Strategy:</span> Leveraged <em>SEMrush</em> and <em>Google Trends</em> to identify niche phrases and align metadata, headers, and content structure.</li>
+            <li><span>Schema Markup:</span> Added structured data for video content to enhance visibility in SERPs and rich results.</li>
+            <li><span>On-Page SEO:</span> Created AI-crafted articles and linked category pages to build internal authority and boost engagement.</li>
           </ul>
         </div>
 
@@ -496,12 +496,12 @@
         <div class="list-items">
           <h3>Accessibility & User Experience</h3>
           <ul>
-            <li><strong>WCAG Compliance:</strong> Ensured proper color contrast, logical heading structure, ARIA roles, and keyboard navigation.</li>
-            <li><strong>Mobile-First Design:</strong> Optimized UI elements and layout to function consistently across all devices.</li>
-            <li><strong>Assistive Technology Support:</strong> Added alt text, captions, and transcripts to improve usability for screen readers and non-visual users.</li>
+            <li><span>WCAG Compliance:</span> Ensured proper color contrast, logical heading structure, ARIA roles, and keyboard navigation.</li>
+            <li><span>Mobile-First Design:</span> Optimized UI elements and layout to function consistently across all devices.</li>
+            <li><span>Assistive Technology Support:</span> Added alt text, captions, and transcripts to improve usability for screen readers and non-visual users.</li>
           </ul>
           <p>
-            These efforts resulted in an accessibility score consistently above <strong>97</strong>, confirming a strong commitment to <strong>inclusive digital design</strong>.
+            These efforts resulted in an accessibility score consistently above <span>97</span>, confirming a strong commitment to <span>inclusive digital design</span>.
           </p>
         </div>
 
@@ -509,10 +509,10 @@
         <div class="list-items">
           <h3>Development Process</h3>
           <ul>
-            <li><strong>Stack:</strong> HTML5, CSS3, JavaScript, and Node.js for dynamic components. Deployed via <strong>Netlify</strong> with CI/CD integration.</li>
-            <li><strong>Performance Enhancements:</strong> Minified scripts, implemented lazy loading, and used <strong>Cloudinary</strong> for responsive, compressed image delivery.</li>
-            <li><strong>AI & UX Testing:</strong> Applied analytics tools to observe behavior and guide iterative UI/UX improvements.</li>
-            <li><strong>QA & Compatibility:</strong> Cross-browser tested on Chrome, Safari, Firefox, and Edge to ensure consistency.</li>
+            <li><span>Stack:</span> HTML5, CSS3, JavaScript, and Node.js for dynamic components. Deployed via <span>Netlify</span> with CI/CD integration.</li>
+            <li><span>Performance Enhancements:</span> Minified scripts, implemented lazy loading, and used <span>Cloudinary</span> for responsive, compressed image delivery.</li>
+            <li><span>AI & UX Testing:</span> Applied analytics tools to observe behavior and guide iterative UI/UX improvements.</li>
+            <li><span>QA & Compatibility:</span> Cross-browser tested on Chrome, Safari, Firefox, and Edge to ensure consistency.</li>
           </ul>
         </div>
 
@@ -520,10 +520,10 @@
         <div class="list-items">
           <h3>Key Results</h3>
           <ul>
-            <li><strong>PageSpeed Performance:</strong> From a <strong>35 desktop score</strong> to <strong>100 desktop / 99 mobile</strong>.</li>
-            <li><strong>SEO Impact:</strong> Improved keyword rankings and visibility in organic search.</li>
-            <li><strong>Accessibility:</strong> Reached and maintained a WCAG-aligned score of 97+ across audits.</li>
-            <li><strong>User Engagement:</strong> Increased average session duration by 25% through streamlined UX and faster load times.</li>
+            <li><span>PageSpeed Performance:</span> From a <span>35 desktop score</span> to <span>100 desktop / 99 mobile</span>.</li>
+            <li><span>SEO Impact:</span> Improved keyword rankings and visibility in organic search.</li>
+            <li><span>Accessibility:</span> Reached and maintained a WCAG-aligned score of 97+ across audits.</li>
+            <li><span>User Engagement:</span> Increased average session duration by 25% through streamlined UX and faster load times.</li>
           </ul>
         </div>
 
@@ -532,21 +532,21 @@
           <h3>Challenges & Solutions</h3>
           <ul>
             <li>
-              <strong>Challenge:</strong> Poor performance due to oversized hero video and uncompressed media.
+              <span>Challenge:</span> Poor performance due to oversized hero video and uncompressed media.
               <ul>
-                <li><strong>Solution:</strong> Converted media to <strong>next-gen formats (AVIF/WebP)</strong>, deferred non-critical scripts, and lazy-loaded content.</li>
+                <li><span>Solution:</span> Converted media to <span>next-gen formats (AVIF/WebP)</span>, deferred non-critical scripts, and lazy-loaded content.</li>
               </ul>
             </li>
             <li>
-              <strong>Challenge:</strong> AI-generated copy lacked brand alignment.
+              <span>Challenge:</span> AI-generated copy lacked brand alignment.
               <ul>
-                <li><strong>Solution:</strong> Introduced an editorial refinement process to tailor tone and maintain brand consistency.</li>
+                <li><span>Solution:</span> Introduced an editorial refinement process to tailor tone and maintain brand consistency.</li>
               </ul>
             </li>
             <li>
-              <strong>Challenge:</strong> Ensuring accessibility across video-heavy content.
+              <span>Challenge:</span> Ensuring accessibility across video-heavy content.
               <ul>
-                <li><strong>Solution:</strong> Added <strong>captions, transcripts, and ARIA labels</strong> to all media elements.</li>
+                <li><span>Solution:</span> Added <span>captions, transcripts, and ARIA labels</span> to all media elements.</li>
               </ul>
             </li>
           </ul>
@@ -556,10 +556,10 @@
         <div class="list-items">
           <h3>Outcome</h3>
           <p>
-            <strong>Sports Tube Video Blog</strong> is a shining example of how <strong>AI-powered content creation</strong>, <strong>SEO optimization</strong>, and <strong>performance-first development</strong> can work together to produce a fast, engaging, and accessible web experience.
+            <span>Sports Tube Video Blog</span> is a shining example of how <span>AI-powered content creation</span>, <span>SEO optimization</span>, and <span>performance-first development</span> can work together to produce a fast, engaging, and accessible web experience.
           </p>
           <p>
-            This case study showcases my ability to deliver results across technical, creative, and strategic areas—perfect for roles requiring innovation in <strong>AI content strategy</strong>, <strong>SEO web development</strong>, and <strong>accessibility compliance</strong>.
+            This case study showcases my ability to deliver results across technical, creative, and strategic areas—perfect for roles requiring innovation in <span>AI content strategy</span>, <span>SEO web development</span>, and <span>accessibility compliance</span>.
           </p>
         </div>
 
@@ -604,7 +604,7 @@
         <div class="author-bio-text">
           <h3>Partner with an AI Content Creator & SEO Specialist</h3>
           <p><i>If you’re seeking a detail-oriented professional who combines creativity, data-driven strategy, and technical skill to deliver exceptional digital content—your search ends here.</i></p>
-          <p>My name is Genny Allison, and through <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and SEO-focused website development. Using advanced tools such as ChatGPT, MidJourney, Figma, and Uizard, I craft optimized content and designs that align with both search engine standards and user experience expectations.</p>
+          <p>My name is Genny Allison, and through <span>Allison Stock Inc.</span>, I specialize in AI-powered content creation and SEO-focused website development. Using advanced tools such as ChatGPT, MidJourney, Figma, and Uizard, I craft optimized content and designs that align with both search engine standards and user experience expectations.</p>
           <p>My portfolio showcases how I blend innovation with strategy to create high-performing, visually engaging, and accessible websites. Each project reflects a deep understanding of SEO best practices, AI-assisted workflows, and the importance of performance, responsiveness, and clarity in modern web design.</p>
 
           <p>Connect with me on 
