--- a/pages/project3/project3-the-casestudy.html
+++ b/pages/project3/project3-the-casestudy.html
@@ -380,7 +380,7 @@
           
           <!-- Fallback ≤480px -->
           <img
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,,w_1458,h_948/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_948/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif"
             alt="Hero image for the Sports Tube Community project—an AI content creation and SEO optimized Blog created by Genny Allison"
             width="1458"
             height="948"
@@ -414,12 +414,12 @@
         </p>
 
         <hr class="casestudy-hr" />
-        <h3>Introduction</h3>
+        <h3>AI Content Creator & SEO Specialist Portfolio Project</h3>
         <p>
-          <span style="color: cyan;">Sports Tube Community</span> is the sister site to the Sports Tube Video Blog and serves as an interactive, community-driven sports platform. Built to enable user-submitted articles and encourage engagement, this project demonstrates my strengths in <span style="color: cyan;">AI-powered content creation</span>, <span style="color: cyan;">SEO strategy</span>, and <span style="color: cyan;">high-performance web development</span>. With a clean layout, responsive design, and intuitive navigation, it highlights my ability to deliver both usability and technical excellence.
+          <span>Sports Tube Community</span> is the sister site to the Sports Tube Video Blog and serves as an interactive, community-driven sports platform. Built to enable user-submitted articles and encourage engagement, this project demonstrates my strengths in <span>AI-powered content creation</span>, <span>SEO strategy</span>, and <span>high-performance web development</span>. With a clean layout, responsive design, and intuitive navigation, it highlights my ability to deliver both usability and technical excellence.
         </p>
         <p>
-          Using tools like <span style="color: cyan;">Figma, Canva, MidJourney, Uizard, ChatGPT,</span> and <span style="color: cyan;">Google PageSpeed Insights</span>, I crafted a seamless user experience backed by engaging content and performance-first engineering. The platform is optimized to rank, load fast, and captivate users through AI-driven storytelling and visual design.
+          Using tools like <span>Figma, Canva, MidJourney, Uizard, ChatGPT,</span> and <span>Google PageSpeed Insights</span>, I crafted a seamless user experience backed by engaging content and performance-first engineering. The platform is optimized to rank, load fast, and captivate users through AI-driven storytelling and visual design.
         </p>
 
         <hr class="casestudy-hr" />
@@ -429,7 +429,7 @@
             <li>Build a responsive, accessible sports blog with category-based navigation and community-focused functionality.</li>
             <li>Generate engaging articles and visuals using AI tools that align with reader interests.</li>
             <li>Implement keyword-based SEO strategies to increase organic search visibility.</li>
-            <li>Achieve perfect Core Web Vitals scores with <strong>Google PageSpeed Insights</strong>.</li>
+            <li>Achieve perfect Core Web Vitals scores with <span>Google PageSpeed Insights</span>.</li>
           </ul>
         </div>
 
