--- a/pages/project3/project3-the-casestudy.html
+++ b/pages/project3/project3-the-casestudy.html
@@ -12,7 +12,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_948/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1450,h_948/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif"
       type="image/avif"
       media="(min-width: 941px)"
       fetchpriority="high"
@@ -260,12 +260,14 @@
       @media (max-width: 480px) {
         .canvas-skills-grid {
           padding: 0.25rem;
+          height: 200px;
+          width: 480px;  
         }
 
         .canvas-skills-grid img {
           border-width: 0.5em;
           object-fit: cover;
-          aspect-ratio: 164 / 100;
+          min-height: 168px;
           object-position: center top;
 
         }
@@ -274,10 +276,11 @@
           display: flex;
           flex-direction: column;
           justify-content: center;
-          min-height: 100px;
+          min-height: 168px;
           border-width: 0.5em;
-          width: 50%;
-          max-width: 50vw;
+          width: 100%;
+          max-width: 480px;
+          height: auto;
           padding-right: 0.7em;
         }
 
@@ -359,7 +362,7 @@
         <picture> 
           <!-- Desktop ≥ 941px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_948/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1450,h_948/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif"
             media="(min-width: 941px)"
             type="image/avif"
           />
@@ -382,9 +385,9 @@
           <img
             src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_948/v1748887777/sports-tube-community-hero-desktop_m0ri3y.avif"
             alt="Hero image for the Sports Tube Community project—an AI content creation and SEO optimized Blog created by Genny Allison"
-            width="1458"
+            width="1450"
             height="948"
-            style="object-fit: cover; aspect-ratio: 1458 / 948; width: 100%; height: auto;"
+            style="object-fit: cover; aspect-ratio: 1450 / 948; width: 100%; height: auto;"
             fetchpriority="high"
             loading="eager"
             decoding="async"
@@ -575,9 +578,9 @@
           <img 
             src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_640,h_234,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
             width="320" 
-            height="117" 
+            height="234" 
             alt="Photo of Genny Allison, the web developer and AI content specialist"
-            style="object-fit: contain; aspect-ratio: 320 / 117;"
+            style="object-fit: contain;"
             loading="auto" 
             decoding="async" 
           />
@@ -585,7 +588,7 @@
         <div class="author-bio-text">
           <h3>Partner with an AI Content Creator & SEO Specialist</h3>
           <p><i>If you’re seeking a detail-oriented professional who combines creativity, data-driven strategy, and technical skill to deliver exceptional digital content—your search ends here.</i></p>
-          <p>My name is Genny Allison, and through <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and SEO-focused website development. Using advanced tools such as ChatGPT, MidJourney, Figma, and Uizard, I craft optimized content and designs that align with both search engine standards and user experience expectations.</p>
+          <p>My name is Genny Allison, and through <span>Allison Stock Inc.</span>, I specialize in AI-powered content creation and SEO-focused website development. Using advanced tools such as ChatGPT, MidJourney, Figma, and Uizard, I craft optimized content and designs that align with both search engine standards and user experience expectations.</p>
           <p>My portfolio showcases how I blend innovation with strategy to create high-performing, visually engaging, and accessible websites. Each project reflects a deep understanding of SEO best practices, AI-assisted workflows, and the importance of performance, responsiveness, and clarity in modern web design.</p>
 
           <p>Connect with me on 
@@ -632,7 +635,7 @@
           />
           <img       
             src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_484,h_210,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
-            alt="Allison Stock Inc. logo representing Genny Allison’s AI-powered web development and SEO services"
+            alt="Photo of Genny Allison, the web developer and AI content specialist"
             width="242"
             height="105"
             loading="lazy"
