--- a/pages/collections.html
+++ b/pages/collections.html
@@ -539,7 +539,7 @@
       <div class="collections-row">
         <div class="collection-thumbnail-box">
           <div class="collections-title fancy-border-title">
-            <h2><a href="/pages/project4.html">project 4</a></h2>
+            <h2><a href="/pages/project4/project4-intro.html">project 4</a></h2>
           </div>
           <div class="collections-container">
 
