--- a/pages/project1/project1-the-casestudy.html
+++ b/pages/project1/project1-the-casestudy.html
@@ -483,10 +483,10 @@
             <h3>The Role of AI</h3>
             <p>AI tools played a crucial role in every aspect of this project, enabling me to streamline workflows, enhance creativity, and deliver high-quality results:</p>
             <ul>
-                <li><strong>ChatGPT:</strong> Generated article drafts, headlines, and meta descriptions, which were refined for tone, clarity, and SEO relevance.</li>
-                <li><strong>MidJourney and DALL-E:</strong> Created vibrant visuals for hero banners and article imagery, giving the blog a bold, futuristic aesthetic.</li>
-                <li><strong>Canva:</strong> Enhanced and styled graphics for a polished, professional look.</li>
-                <li><strong>Relume.io and Uizard:</strong> Provided UI/UX insights to help shape a user-friendly layout.</li>
+                <li><a href="https://chatgpt.com/" target="_blank" rel="noopener noreferrer"><strong>ChatGPT:</strong></a> Generated article drafts, headlines, and meta descriptions, which were refined for tone, clarity, and SEO relevance.</li>
+                <li><strong><a href="https://www.midjourney.com/home" target="_blank" rel="noopener noreferrer">MidJourney</strong></a> and <a href="https://openai.com/index/dall-e-3/"><strong>DALL-E:</strong></a> Created vibrant visuals for hero banners and article imagery, giving the blog a bold, futuristic aesthetic.</li>
+                <li><a href="https://www.canva.com/" target="_blank" rel="noopener noreferrer"><strong>Canva:</strong></a> Enhanced and styled graphics for a polished, professional look.</li>
+                <li><a href="https://www.relume.io/" target="_blank" rel="noopener noreferrer"><strong>Relume.io:</strong> and <a href="https://app.uizard.io/prototypes" target="_blank" rel="noopener noreferrer"><strong>Uizard:</strong> Provided UI/UX insights to help shape a user-friendly layout.</li>
             </ul>
           </div>
           <hr class="casestudy-hr">
@@ -494,9 +494,9 @@
             <h3>SEO Optimization</h3>
             <p>SEO was essential for the blog's success. Here's how it was integrated:</p>
             <ul>
-                <li><strong>Google Search Console</strong>: Managed indexing, verified mobile usability, and optimized structured data for rich results.</li>
-                <li><strong>SEMrush</strong> and <strong>Ahrefs</strong>: Conducted in-depth keyword research and optimized content for high-value terms.</li>
-                <li><strong>PageSpeed Insights</strong>: Achieved a perfect 100/100 score on both mobile and desktop, optimizing for performance.</li>
+                <li><a href="https://search.google.com/search-console/about" target="_blank" rel="noopener noreferrer"><strong>Google Search Console:</strong></a> Managed indexing, verified mobile usability, and optimized structured data for rich results.</li>
+                <li><a href="https://www.semrush.com/"><strong>SEMrush</strong></a> and <a href="https://ahrefs.com/" target="_blank" rel="noopener noreferrer"><strong>Ahrefs:</strong></a> Conducted in-depth keyword research and optimized content for high-value terms.</li>
+                <li><a href="https://pagespeed.web.dev/" target="_blank" rel="noopener noreferrer"><strong>PageSpeed Insights:</strong></a> Achieved a perfect 100/100 score on both mobile and desktop, optimizing for performance.</li>
             </ul> 
           </div>
           <hr class="casestudy-hr">
@@ -514,7 +514,7 @@
               <ul>
                 <li><strong>Technology Stack:</strong> HTML, CSS, JavaScript, hosted on Netlify for efficient deployment.</li>
                 <li><strong>Performance Optimization:</strong> Implemented lazy loading, preloaded resources, and optimized file formats for fast loading.</li>
-                <li><strong>Accessibility Compliance:</strong> Designed with WCAG standards, using semantic HTML and ARIA roles for better user experience.</li>
+                <li><strong>Accessibility Compliance:</strong> Designed with <a href="https://www.w3.org/" target="_blank" rel="noopener noreferrer"><strong>WCAG standards</strong></a>, using semantic HTML and ARIA roles for better user experience.</li>
                 <li><strong>Responsive Design:</strong> Adopted a mobile-first approach to ensure consistent functionality across all devices.</li>
               </ul>
           </div>
