--- a/pages/project3/project3-the-design.html
+++ b/pages/project3/project3-the-design.html
@@ -388,7 +388,7 @@
           <!-- Fallback ≤480px -->
           <img
             src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_352/v1748885291/sports-tube-community-design-thumbnail_dq4jpx.avif"
-            alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology vibes"
+            alt="The final look at the Sports Tube Community SEO optimized website"
             width="164"
             height="176"
             style="object-fit: cover;"
@@ -469,16 +469,16 @@
               sizes="100vw"
             />
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1737787104/home-page_muz0qo.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_399,h_763/v1737787104/home-page_muz0qo.avif"
               type="image/avif"
               media="(min-width: 481px) and (max-width: 1199px)"
               sizes="100vw"
             />
             <img 
               src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1737787104/home-page_muz0qo.avif"
-              alt="Wireframe of the homepage layout for Tech Trends Blog"
-              width="100%"
-              height="auto"
+              alt="Wireframe of the homepage layout for Sports Tube Community"
+              width="284"
+              height="542"
               loading="lazy"
               fetchpriority="low"
               style="object-fit: contain;"
@@ -502,7 +502,7 @@
             />
             <img 
               src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_568,h_1414/v1737787104/article_z9lzjq.avif"
-              alt="Wireframe of the homepage layout for Tech Trends Blog"
+              alt="Wireframe of the homepage layout for Sports Tube Community"
               width="284"
               height="707"
               loading="lazy"
@@ -515,22 +515,22 @@
         <div class="wireframe-img fancy-border-img" id="tt-wireframe-img3">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_585,h_4408/v1742921918/article-wireframe-tech-trends_mz3vf6.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1302/v1749223443/st-community-article-collections-page_xqqbyt.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
             />
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_487,h_2706/v1742921918/article-wireframe-tech-trends_mz3vf6.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_798,h_2250/v1749223443/st-community-article-collections-page_xqqbyt.avif"
               type="image/avif"
               media="(min-width: 481px) and (max-width: 1199px)"
               sizes="100vw"
             />
             <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_568,h_1922/v1742921918/article-wireframe-tech-trends_mz3vf6.avif"
-              alt="Wireframe of the article page layout for Tech Trends Blog"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_568,h_1598/v1749223443/st-community-article-collections-page_xqqbyt.avif"
+              alt="Wireframe of the article collections page layout for Sports Tube Community"
               width="284"
-              height="961"
+              height="799"
               loading="lazy"
               fetchpriority="low"
               style="object-fit: contain;"
